--- a/results/overleaf/box_plot_stats.tex
+++ b/results/overleaf/box_plot_stats.tex
@@ -33,5 +33,10 @@
 	 & Median & 48.99\% & 70.79\% \\
 	 & Max & 97.13\% & 117.83\% \\
 	\hline
+	\multirow{4}{*}{SS3 - sampled} & Q1 & -14.08\% & -33.62\% \\
+	 & Q3 & -3.07\% & 8.78\% \\
+	 & Median & -7.67\% & -2.12\% \\
+	 & Max & 1.04\% & 25.24\% \\
+	\hline
 	\end{tabular}
 \end{table}
