Update to make everything better. Nature submission ready

--- a/results/overleaf/TableScoreboard.tex
+++ b/results/overleaf/TableScoreboard.tex
@@ -13,6 +13,6 @@ GB1 three-vs-rest & 0.8791 & Spearman's Corr. & ProGen2-medium & Adapters & midd
 Meltome mixed & 0.7232 & Spearman's Corr. & ProGen2-xlarge & LoRA & last & mean & linear \\ \hline
 HER2 one-vs-rest & 0.3898 & MCC & ProGen2-xlarge & LoRA- & quarter1 & cls & linear \\ \hline
 RBD one-vs-rest & 0.5545 & MCC & ProGen2-small & LoRA & middle & mean & linear \\ \hline
-SS3 sampled & 0.8644 & Accuracy & ESM2-15B & Adapters & last & - & linear \\ \hline
+SS3 sampled & 0.8644 & Macro Accuracy & ESM2-15B & Adapters & last & - & linear \\ \hline
 \end{tabular}
 \end{document}
